# kr2-obj-parser

./: .gitignore  .gitmodules  CMakeLists.txt  Log.h  Makefile  README.md  main.cpp  obj_parser.cpp  parser.cpp  parser.h  vertex_parser.cpp
Core/: Application.cpp  Application.h  Log.cpp  Log.h  OpenGLApplication.cpp  OpenGLApplication.h  Ref.h
Graphics/: IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
assets/: default.frag  default.vert
